# ricgraph

./: .fairseco_history.json  .gitignore  CITATION.cff  Containerfile  LICENSE  Makefile  README-PyPI.md  README.md  codemeta-harvest.json  manifest.json-docswebsite  pyproject.toml  pyproject.toml-ricgraph  pyproject.toml-ricgraph_explorer  requirements.txt  ricgraph.ini-sample
convenience/: batch_harvest_demo.sh  batch_harvest_organization.sh  batch_harvest_organization_rsd_yoda.sh  batch_harvest_rik.sh  batch_harvest_uu.sh  batch_rename_organization.sh  get_cmdline_args.sh  orgs_to_rename_UU.csv
docs/: index.html  ricgraph_as_server.md  ricgraph_backend_memgraph.md  ricgraph_backend_neo4j.md  ricgraph_comparison.md  ricgraph_containerized.md  ricgraph_details.md  ricgraph_documentation_intro.md  ricgraph_example_use_videos.md  ricgraph_explorer.md  ricgraph_future_work.md  ricgraph_harvest_scripts.md  ricgraph_index_documentation.md  ricgraph_install_configure.md  ricgraph_known_bugs.md  ricgraph_mentions.md  ricgraph_misc_scripts.md  ricgraph_neo4j_bloom_use.md  ricgraph_outreach.md  ricgraph_presentations_mentions.md  ricgraph_programming_examples.md  ricgraph_publications_presentations_mentions.md  ricgraph_pubs_pres_news_use_ment.md  ricgraph_pubs_presentations_use_mentions.md  ricgraph_query_visualize.md  ricgraph_restapi.md  ricgraph_restapi_gendoc.md  ricgraph_script_writing.md  ricgraph_toc_documentation.md  ricgraph_tutorial.md  ricgraph_videos.md
enhance/: delete_emplids.py  delete_employeeids.sh  delete_pers_data.py  delete_personal_data.py  delete_personal_data.sh  enrich_orcids_scopusids.py  find_double_pids.py  organization_collaborations_batch.py  orgs_to_rename_AUMC.csv  orgs_to_rename_DUT.csv  orgs_to_rename_UU.csv  orgs_to_rename_VUA.csv  pers_to_delete_UU.csv  rename_organizations.sh  rename_orgs.py
export_ricgraph_examples/: count_organizations_contributed_to_category.py  export_person_identifiers.py  export_person_node_properties.py  ricgraph_import_raw_from_csv.py
find_enrich_ricgraph_examples/: enrich_orcids_scopusids.py  find_double_pids.py
harvest/: 0-readme.txt  batch_harvest_demo.py  batch_harvest_dut.py  batch_harvest_uu.py  harvest_openalex_to_ricgraph.py  harvest_pure_to_ricgraph.py  harvest_rsd_to_ricgraph.py  harvest_uustaffpages_to_ricgraph.py  harvest_yoda_datacite_to_ricgraph.py
harvest_multiple_sources/: 0-readme.txt  multiple_harvest_demo.sh  multiple_harvest_open_ricgraph_demo_server.sh  multiple_harvest_organization.sh  multiple_harvest_organization_rsd_yoda.sh  multiple_harvest_rik.sh  multiple_harvest_uu.sh
harvest_to_ricgraph_examples/: batch_harvest.py  batch_harvest_dut.py  batch_harvest_tud.py  batch_harvest_uu.py  harvest_openalex_to_ricgraph.py  harvest_pure_to_ricgraph.py  harvest_rsd_to_ricgraph.py  harvest_uustaffpages_to_ricgraph.py  harvest_yoda_datacite_to_ricgraph.py
import_export/: construct_ricgraph_from_csv.py  count_organizations_contributed_to_category.py  export_person_identifiers.py  export_person_node_properties.py  ricgraph_export_raw_to_csv.py  ricgraph_import_raw_from_csv.py
maintenance/: check_external_links_in_mdfiles.py  check_links_docs.ricgraph.eu.sh  check_links_docs.ricgraph.eu_local.sh  check_links_www.ricgraph.eu.sh  check_links_www.ricgraph.eu_local.sh  convert_openapi_to_mddoc.py  create_index_documentation.py  create_toc_documentation.py  create_toc_index.sh  ricgraph-linkchecker.conf  update_version.bash  update_version.sh
maintenance_scripts/: check_external_links_in_mdfiles.py  check_internal_links_in_mdfiles.py  convert_openapi_to_mddoc.py  create_index_documentation.py  create_toc_documentation.py  update_version.bash
neo4j_config/: ricgraph_bloom_config.json
ricgraph/: __init__.py  ricgraph.py  ricgraph_cache.py  ricgraph_constants.py  ricgraph_cypher.py  ricgraph_file.py  ricgraph_graphdb.py  ricgraph_harvest.py  (+3 more)
(+71 files in other folders)
