[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["ricgraph"]

[project]
name = "ricgraph"
version = "2.9"
authors = [
  { name="Rik D.T. Janssen" },
]
description = "Ricgraph - Research in context graph"
readme = "README-PyPI.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
keywords = ["Ricgraph", "Ricgraph Explorer", "Ricgraph REST API", "Research in context graph",
    "Graph", "Graph database", "Data harvesting", "Data enrichment", "Data linking",
    "Linked data", "Knowledge graph", "Metadata", "Utrecht University"]
dependencies = [
    "neo4j >= 5.8",
    "numpy",
    "pandas",
    "requests",
]

[project.urls]
Website = "https://www.ricgraph.eu"
Documentation = "https://github.com/UtrechtUniversity/ricgraph/blob/main/README.md"
GitHub = "https://github.com/UtrechtUniversity/ricgraph"
Issues = "https://github.com/UtrechtUniversity/ricgraph/issues"
Download = "https://github.com/UtrechtUniversity/ricgraph/releases"
"Release Notes" = "https://github.com/UtrechtUniversity/ricgraph/releases"
